@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/ruby-prof
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-prof/ChangeLog,v 1.6 2008/11/13 04:00:46 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-prof/ChangeLog,v 1.7 2008/11/13 04:18:12 flameeyes Exp $
+
+  13 Nov 2008; Diego Pettenò <flameeyes@gentoo.org>
+  -ruby-prof-0.4.1.ebuild, -ruby-prof-0.5.0.ebuild, -ruby-prof-0.5.2.ebuild:
+  Remove some old versions.
 
 *ruby-prof-0.7.0 (13 Nov 2008)
 
